Implementação dos logs